--- a/www/player2.html
+++ b/www/player2.html
@@ -3,13 +3,12 @@
 <!-- Top Navbar-->
 <div class="navbar">
     <div class="navbar-inner">
-        <div class="left">
-            <a href="#" class="voltar link">
+        <div class="left voltarmuda">
+            <a href="#" class="voltar2 link ">
                 <i class="icon icon-back color-white"></i>
                 <span class="color-white">Voltar</span>
             </a>
         </div>
-		
         <div class="center sliding color-white player">Player</div>
         <div class="right">
             <a href="#" class="link icon-only open-panel"><i class="icon icon-bars color-white"></i></a>
@@ -17,8 +16,9 @@
     </div>
 </div>
 <div class="pages">
-    <div data-page="player" class="page">
+    <div data-page="player2" class="page">
         <div class="page-content padding0" style="margin-top:-24px;">
+		
             <div class="content-block padding0">
                 <div class="">
     <!-- Each "cell" has col-[widht in percents] class -->
